--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://kareem2003.github.io/kareem",
-  "name": "myPortfolio",
+  "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "my-portfolio": "file:",
     "myPortfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
