--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "my-portfolio": "file:",
     "myPortfolio": "file:",
     "react": "^18.3.1",
