--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "myPortfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slideshow-image": "^4.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
