--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.7.7",
     "my-portfolio": "file:",
     "myPortfolio": "file:",
@@ -21,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-simple-image-slider": "^2.4.1",
-    "react-slideshow-image": "^4.3.1"
+    "react-slideshow-image": "^4.3.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
